Changes in 6.0.4 (unreleased)
- NFORenum specific changes:
  - Data file updates
    - Action 0, feature 0xF, property 0x18 (Object amount on map)
    - Action 5, type 0x15 (OpenTTD GUI): Now 175 sprites are allowed

Changes in 6.0.3 (2013-07-15)
- NFORenum specific changes:
  - Data file updates
    - Action 4 language ID 0x13 (Scottish Gaelic).
    - Action D patch variables 15 and 16.
    - Action 5, type 15 (OpenTTD GUI): Now 174 sprites are allowed
- GRFcodec specific changes:
  - Fix container v2 include sprite decoding.
  - Fix encoding from interlaced png images.
- GRFID specific changes:
  - Fix number of crashes caused by corrupted NewGRFs

Changes in 6.0.2 (2013-01-06)
- NFORenum specific changes:
  - Data file updates
    - Base costs.
    - Action5 type 15.
- GRFcodec specific changes:
  - Fix encoding container v1 wrt. maximum size of verbatim data.
  - Fix container v2 tile decompression.

Changes in 6.0.1 (2012-09-21)
- NFORenum specific changes:
  - Data file updates
    - Action 0 station property 1A.
    - Action 2 global variables 06, 0B..0F, 13..16, 1E, 21, 22.
    - Action 2 train variables 4C, 61, 62.
    - Action 2 road vehicle variables 4B, 4C, 61, 62.
    - Action 2 ship variables 4B, 4C.
    - Action 2 aircraft variables 4B, 4C.
    - Action 5 type 15.
    - Callback 15F.
  - Add RPN calculations; the RPN expression is replaced by the calculated value.
- GRFcodec specific changes:
  - Fix reading/writing the size value for pseudo sprites so pseudo sprites actually work with container v2.
  - Reject pseudo sprites that are too large for container v1 when not compiling v2.
  - Do not write incomplete sprites when the maximum height of output images is limited.
  - Fix reading incorrect graphics when multiple graphics are provided for a sprite and writing a GRF container version 1 GRF and the y position decreases.
  - Fix decoding of regular encoded 32bpp sprites.